Fix ConnectorDocGenerator